Fix scroll issue on mobile landscape galleries

--- a/src/app/components/Gallery/gallery.module.css
+++ b/src/app/components/Gallery/gallery.module.css
@@ -13,7 +13,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  /* overflow: hidden; */
+  position: relative;
+  z-index: 2;
 }
 
 .gallery-spacer {
@@ -83,8 +84,6 @@
 @media only screen and (max-width: 949px) and (orientation: landscape) {
   .gallery {
     top: 35px;
-    position: relative;
-    /* overflow-y: scroll; */
   }
 
   .gallery-spacer {
@@ -92,6 +91,5 @@
   }
   .gallery-swiper {
     height: calc((var(--vh, 1vh) * 100));
-    /* top: 35px; */
   }
 }
